--- a/app/src/resources/views/addFriend/detail/friendRequest.hbs
+++ b/app/src/resources/views/addFriend/detail/friendRequest.hbs
@@ -1,138 +1,158 @@
-<!DOCTYPE html>
 <head>
 
 </head>
-<body>
-    <div class="main-content-page">
-        <div class="taskbar">
-        <img class="js-my-avatar" src="{{userNameFInstance.avatar}}" alt="">
-        
-        <button class="js-icon-taskbar-chat icon-taskbar">
-            <i class="ti-comment-alt "></i>
-        </button>
-        <button class="js-icon-taskbar-list icon-taskbar select">
-            <i class="ti-user"></i>
-        </button>
-        <form class="form-inline my-2 my-lg-0" action="/user/logout">
-            <button class="btn-logout" type="submit"><i class="ti-shift-left"></i></button>
-        </form>
-        <div class="modal-myprofile js-modal-myprofile">
-            <div class="block-profile my-profile js-my-profile">
-                <div class="header-profile">
-                    <h5>Thông tin tài khoản</h5>
-                </div>
-                <div class="block-my-pro">
-        
-                    <div class="profile-avatar">
-                        <img class="my-avatar" src="{{userNameFInstance.avatar}}" alt="">
-        
-                    </div>
-                </div>
-                <div class="profile-name">
-                    <h5>{{userNameFInstance.fullName}}</h5>
-                </div>
-                <h6 class="header-info">Thông tin cá nhân</h6>
-                <div class="profile-infomation">
-                    <div class="name-info">
-                        <span>
-                            Tài khoản
-                        </span>
-                        <span>
-                            Email
-                        </span>
-                        <span>
-                            Giới tính
-                        </span>
-                        <span>
-                            Ngày sinh
-                        </span>
-                    </div>
-                    <div class="infomation">
-                        <span>
-                            {{userNameFInstance.userName}}
-                        </span>
-                        <span>
-                            {{userNameFInstance.email}}
-                        </span>
-                        <span>
-                            {{userNameFInstance.sex}}
-                        </span>
-                        <span>
-                            {{userNameFInstance.birthday}}
-                        </span>
-                    </div>
-        
-                </div>
-            </div>
-        </div>
-        </div>
-        <div class="js-menu-contact menu-contact">
-            <div class="header-list-user">
-                <input class="search-friend" type="text" placeholder="Tìm Kiếm">
-                <button class="btn-add-form js-btn-add-form"><i class="ti-plus"></i></button>
-        
-            </div>
-            <form action="/friend/home" method="get">
 
-            <button class="js-tab-list" onclick="openTabList()">
-                <i class="ti-layout-media-overlay"></i>
-                Danh sách bạn bè
-            </button>
+<body>
+    <div class='main-content-page'>
+        <div class='taskbar'>
+            <img class='js-my-avatar' src='{{userNameFInstance.avatar}}' alt='' />
+
+            {{!-- nút message --}}
+            <form action="/" method="get">
+                <button class="js-icon-taskbar-chat icon-taskbar">
+                    <i class="ti-comment-alt "></i>
+                </button>
             </form>
-            <form action="">
-                <button class="js-tab-friend-request select" onclick="openTabFriendRequest()">
-                    <i class="ti-email"></i>
+
+            {{!-- nút bạn bè --}}
+            <button class='js-icon-taskbar-list icon-taskbar select'>
+                <i class='ti-user'></i>
+            </button>
+            <form class='form-inline my-2 my-lg-0' action='/user/logout'>
+                <button class='btn-logout' type='submit'><i class='ti-shift-left'></i></button>
+            </form>
+            <div class='modal-myprofile js-modal-myprofile'>
+                <div class='block-profile my-profile js-my-profile'>
+                    <div class='header-profile'>
+                        <h5>Thông tin tài khoản</h5>
+                    </div>
+                    <div class='block-my-pro'>
+
+                        <div class='profile-avatar'>
+                            <img class='my-avatar' src='{{userNameFInstance.avatar}}' alt='' />
+
+                        </div>
+                    </div>
+                    <div class='profile-name'>
+                        <h5>{{userNameFInstance.fullName}}</h5>
+                    </div>
+                    <h6 class='header-info'>Thông tin cá nhân</h6>
+                    <div class='profile-infomation'>
+                        <div class='name-info'>
+                            <span>
+                                Tài khoản
+                            </span>
+                            <span>
+                                Email
+                            </span>
+                            <span>
+                                Giới tính
+                            </span>
+                            <span>
+                                Ngày sinh
+                            </span>
+                        </div>
+                        <div class='infomation'>
+                            <span>
+                                {{userNameFInstance.userName}}
+                            </span>
+                            <span>
+                                {{userNameFInstance.email}}
+                            </span>
+                            <span>
+                                {{userNameFInstance.sex}}
+                            </span>
+                            <span>
+                                {{userNameFInstance.birthday}}
+                            </span>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class='js-menu-contact menu-contact'>
+            <div class='header-list-user'>
+                <input class='search-friend' type='text' placeholder='Tìm Kiếm' />
+                <button class='btn-add-form js-btn-add-form'><i class='ti-plus'></i></button>
+
+            </div>
+            <form action='/friend/home' method='get'>
+
+                <button class='js-tab-list' onclick='openTabList()'>
+                    <i class='ti-layout-media-overlay'></i>
+                    Danh sách bạn bè
+                </button>
+            </form>
+            <form action=''>
+                <button class='js-tab-friend-request select' onclick='openTabFriendRequest()'>
+                    <i class='ti-email'></i>
                     Lời mời kết bạn
                 </button>
             </form>
         </div>
-        <div class="js-friend-request contact-tab-friend-request js-">
-            <header class="header-contact-tab">
+        <div class='js-friend-request contact-tab-friend-request js-'>
+            <header class='header-contact-tab'>
                 Lời mời kết bạn
             </header>
             <h6>Lời mời đã nhận</h6>
-            <div class="friend-request-receive">
-                <div class="friend-request-receive-item">
-                    {{!-- truyền data vào img, h6, p --}}
+            <div class='friend-request-receive'>
+                {{#each allRequest}}
+                {{#if this.request}}
+                {{#ifEquals this.userNameT ../userChat.userName}}
+                <h1>{{this.userNameT}}</h1>
+                <h1>{{../userChat.userName}}</h1>
+                <div class='friend-request-receive-item'>
+                    {{! truyền data vào img, h6, p }}
                     <div>
-                        <img src="{{userNameFInstance.avatar}}" alt="">
+                        <img src='{{../this.reqName.avatar}}' alt='' />
                         <div>
-                            <h6>Chu Bá Hiếu</h6>
-                            <p>hieublue</p>
-        
+                            <h6>{{../this.reqName.fullName}}</h6>
+                            <p>{{../this.userNameF}}</p>
+
                         </div>
                     </div>
-        
-                    <div class="block-btn-reponse-request">
-                        <button class="btn-accept-request">
-                            Xác nhận
-                        </button>
-                        <button class="btn-refuse-request">
-                            Từ chối
-                        </button>
+
+                    <div class='block-btn-reponse-request'>
+                        <form action="/friend/updateStatusRequest" method="post">
+                            <input type="hidden" name="status" value="accept">
+                            <input type="hidden" name="id" value={{../this.id}}>
+                            <input type="hidden" name="userName" value={{../this.userNameF}}>
+                            <input type="hidden" name="userNameFriend" value={{../this.userNameT}}>
+                            <button type="submit" class='btn-accept-request'>
+                                Xác nhận
+                            </button>
+                        </form>
+
+                        <form action="/friend/updateStatusRequest" method="post">
+                            <input type="hidden" name="status" value="decline">
+                            <input type="hidden" name="id" value={{../this.id}}>
+                            <button type="submit" class='btn-refuse-request'>
+                                Từ chối
+                            </button>
+                        </form>
                     </div>
-        
+
                 </div>
+                {{/ifEquals}}
+                {{/if}}
+                {{/each}}
             </div>
         </div>
     </div>
 </body>
 
 <script>
-    const btnshow = document.querySelector('.js-my-avatar')
-    const modalpro = document.querySelector('.js-modal-myprofile')
-    const mypro = document.querySelector('.js-my-profile')
-    function showMyProfile(){
+    const btnshow = document.querySelector('.js-my-avatar');
+    const modalpro = document.querySelector('.js-modal-myprofile');
+    const mypro = document.querySelector('.js-my-profile');
+    function showMyProfile() {
         modalpro.classList.add('open')
-    }
-    function closeMyProfile(){
+    };
+    function closeMyProfile() {
         modalpro.classList.remove('open')
-    }
-    btnshow.addEventListener('click',showMyProfile)
-
-    modalpro.addEventListener('click',closeMyProfile)
-
-    mypro.addEventListener('click', function(even){
-        even.stopPropagation()
-    })
+    };
+    btnshow.addEventListener('click', showMyProfile);
+    modalpro.addEventListener('click', closeMyProfile);
+    mypro.addEventListener('click', function (even) { even.stopPropagation() });
 </script>
