--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -80,6 +80,11 @@ body {
 .select {
   background: rgba(0, 0, 0, 0.2) !important; }
 
+.css-select-friend {
+  background: rgba(0, 0, 0, 0.2) !important;
+  cursor: pointer;
+  border-radius: 8px; }
+
 .message__row1:hover > .message__date {
   display: block; }
 
